--- a/src/components/common/Header/styles.module.css
+++ b/src/components/common/Header/styles.module.css
@@ -1,8 +1,9 @@
 .headerContainer {
-  padding: 20px 0;
+  padding: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
 }
 
 .headerLogo {
